--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 *, *::after, *::before {
     box-sizing: border-box;
 }
+html {
+ font-size: 10px;
+}
 
 * {
     margin: 0;
@@ -27,19 +30,26 @@ h1, h2, h3 {
 
 h2 {
     font-style: italic;
-    font-size: 64px;
+    font-size: 6.4rem;
     margin-bottom: 90px;
     text-align: center;
 }
 
 h3 {
     font-style: italic;
-    font-size: 48px;
-    margin-bottom: 90px;
+    font-size: 4.8rem;
+    margin-bottom: 60px;
     text-align: center;
 }
 
 /* ----------Menu------------ */
+.coffee-menu {
+    background-image: url(../img/line3.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: -450px;
+}
+
 .menu {
     background-color: var(--main-color);
     padding-top: 30px;
@@ -66,7 +76,7 @@ h3 {
 
 .logo p {
     font-family: 'Playfair Display', serif;
-    font-size: 36px;
+    font-size: 3.6rem;
     color: white;
 }
 
@@ -89,12 +99,12 @@ li:last-child {
 }
 
 li:last-child a {
-    font-size: 18px;
+    font-size: 1.8rem;
 }
 
 li a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 2.4rem;
     color: white;
 }
 
@@ -117,24 +127,24 @@ header {
 }
 
 .offer-text h1 {
-    font-size: 72px;
+    font-size: 7.2rem;
     font-style: italic;
 }
 
 .offer-text p {
-    font-size: 24px;
+    font-size: 2.4rem;
     margin-top: 45px;
     margin-bottom: 70px;
 
 }
 
-.offer-text button {
+.btn {
     width: 460px;
-    height: 110px;
+    height: 100px;
     border-radius: 100px;
     background-color: var(--main-color);
     color: white;
-    font-size: 36px;
+    font-size: 3.6rem;
     border: none;
     font-family: 'Montserrat', sans-serif;
     transition: 0.5s;
@@ -142,9 +152,9 @@ header {
 
 }
 
-.offer-text button:hover {
+.btn:hover {
     transition: 0.5s;
-    box-shadow: 0 0 50px rgba(109,126,94,0.9);
+    box-shadow: 0 0 30px rgba(109,126,94,0.9);
 }
 
 .offer-text {
@@ -210,17 +220,17 @@ header {
 
 .seed-card-text p:first-child {
     color: white;
-    font-size: 36px;
+    font-size: 3.6rem;
 }
 
 .seed-card-text p:last-child {
     color: white;
-    font-size: 24px;
+    font-size: 2.4rem;
 }
 
 .seed-card-text p span {
     color: white;
-    font-size: 18px;
+    font-size: 1.8rem;
 }
 
 .seed .container > p {
@@ -231,7 +241,9 @@ header {
 }
 
 /* ----------Coffee menu------------ */
-
+.coffee-menu {
+    margin-bottom: 100px;
+}
 .menu-main {
     display: flex;
     justify-content: space-between;
@@ -244,12 +256,30 @@ header {
     justify-content: center;
 }
 
-.menu-coffee-cards {
+.menu-coffee {
+    padding-right: 75px;
+}
+
+.menu-tea {
+    padding-left: 75px;
+}
+
+.menu-coffee-cards, .menu-ne-coffee-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.menu-coffee, .menu-tea {
+    width: 50%;
+}
+
+
+.menu-brand-cards {
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-bottom: 75px;
 }
 
 .menu-coffee-card, .menu-tea-card, .menu-brand-card {
@@ -262,12 +292,232 @@ header {
     background-repeat: no-repeat;
 }
 
+.menu-coffee-card-text {
+    background-color: var(--main-color);
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .menu-coffee-card {
     background-image: url(../img/menu-coffee.png);
+    margin-bottom: 50px;
 }
 .menu-tea-card {
     background-image: url(../img/menu-ne-coffee.png);
+    margin-bottom: 50px;
 }
 .menu-brand-card {
     background-image: url(../img/menu-brand.png);
+}
+
+.menu-coffee-card-text p:first-child {
+    color: white;
+    font-size: 2.4rem;
+}
+
+.menu-coffee-card-text p:last-child {
+    color: white;
+    font-size: 1.8rem;
+}
+
+.menu-coffee-card-text p span {
+    color: white;
+    font-size: 1.4rem;
+}
+
+/* ----------Why we------------ */
+.why-we {
+    background-image: url(../img/why-we.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    padding-bottom: 40px;
+    padding-top: 50px;
+    background-position-y: -50px;
+    margin-bottom: 250px;
+}
+.why-we .container h2 {
+margin-bottom: 300px;
+}
+.caracity {
+    display: flex;
+    justify-content: space-between;
+}
+
+.ellipse-border {
+    height: 344px;
+    width: 344px;
+    border: 5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+}
+
+.ellipse {
+    width: 80%;
+    height: 80%;
+    border-radius: 100%;
+    background-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ellipse p {
+    font-size: 2.4rem;
+    color: white;
+    text-align: center;
+}
+
+/* ----------contacts------------ */
+.form-map {
+    display: flex;
+    justify-content: space-between;
+    align-items: top;
+}
+
+.contacts {
+    background-image: url(../img/line3.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 98%;
+    margin-bottom: 130px;
+}
+
+.map {
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+.map-text {
+    flex-basis: 50%;
+}
+
+.form {
+    flex-basis: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 85%;
+    background-color: #E4E4E4;
+    border-radius: 50px;
+    padding-top: 30px;
+}
+
+.btn-form {
+    height: 70px;
+    width: 276px;
+    font-size: 2.4rem;
+    margin-bottom: 36px;
+    margin-top: 36px;
+}
+
+textarea {
+    resize: none;
+    padding-left: 26px;
+    padding-right: 26px;
+    border-radius: 10px;
+    font-size: 1.8rem;
+    width: 80%;
+    height: 160px;
+    padding-top: 20px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+}
+
+input {
+    padding-left: 26px;
+    padding-right: 26px;
+    border-radius: 10px;
+    font-size: 1.8rem;
+    width: 80%;
+    height: 30%;
+    margin-bottom: 36px;
+    height: 50px;
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+}
+
+textarea::placeholder{
+    font-size: 1.8rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+input::placeholder{
+    font-size: 1.8rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.contacts .container h3 {
+    margin-bottom: 20px;
+}
+
+/* ----------footer------------ */
+footer {
+    background-color: var(--main-color);
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+footer .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 15%;
+    align-items: center;
+}
+
+.footer-contacts {
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 60%;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.footer-logo {
+    flex-basis: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer-logo:last-child {
+    font-size: 2.4rem;
+    color: white;
+    font-family: 'Playfair Display', serif;
+    margin-left: 20px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact p:first-child {
+    font-size: 2.4rem;
+    color: white;
+    margin-bottom: 18px;
+}
+
+.contact p:last-child {
+    font-size: 1.8rem;
+    color: white;
 }
